<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relative"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
    
    <TextView
        android:id="@+id/textview"
        android:textColor="#fff"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="18sp"
        android:text="@string/welcome"/>
    
    <TextView
        android:id="@+id/text"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>
    
    <Button
        android:id="@+id/bt1"
        android:onClick="btClick"
        android:alpha="0.7"
        android:text="@string/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:layout_below="@id/text"
        android:background="#33CCFF"
        android:height="100dp"
        android:width="120dp" />
    
      <Button
        android:id="@+id/bt2"
        android:onClick="btClick"
        android:alpha="0.7"
        android:text="@string/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/bt1"
        android:layout_below="@id/text"
        android:layout_marginTop="15sp"
        android:layout_marginLeft="5sp"
        android:background="#33CCFF"
        android:height="100dp"
        android:width="120dp" />
      
       <Button
        android:id="@+id/bt3"
        android:onClick="btClick"
        android:alpha="0.7"
        android:text="@string/help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bt1"
        android:layout_marginTop="5sp"
        android:background="#33CCFF"
        android:height="100dp"
        android:width="120dp" />
    
      <Button
        android:id="@+id/bt4"
        android:onClick="btClick"
        android:alpha="0.7"
        android:text="@string/about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/bt3"
        android:layout_below="@id/bt2"
        android:layout_marginTop="5sp"
        android:layout_marginLeft="5sp"
        android:background="#33CCFF"
        android:height="100dp"
        android:width="120dp" />
      
      <Button
        android:id="@+id/bt5"
        android:onClick="btClick"
        android:alpha="0.7"
        android:text="@string/more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bt3"
        android:layout_marginTop="5sp"
        android:background="#33CCFF"
        android:height="100dp"
        android:width="120dp" />
    
      <Button
        android:id="@+id/bt6"
        android:alpha="0.7"
        android:onClick="btClick"
        android:text="@string/point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/bt5"
        android:layout_below="@id/bt4"
        android:layout_marginTop="5sp"
        android:layout_marginLeft="5sp"
        android:background="#33CCFF"
        android:height="100dp"
        android:width="120dp" />
      
      <Button
        android:onClick="btClick"
        android:id="@+id/bt7"
        android:alpha="0.7"
        android:text="@string/history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bt5"
        android:layout_marginTop="5sp"
        android:background="#33CCFF"
        android:height="100dp"
        android:width="120dp" />
    
      <Button
        android:onClick="btClick"
        android:id="@+id/bt8"
        android:alpha="0.7"
        android:text="@string/advance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/bt7"
        android:layout_below="@id/bt6"
        android:layout_marginTop="5sp"
        android:layout_marginLeft="5sp"
        android:background="#33CCFF"
        android:height="100dp"
        android:width="120dp" />
      
       <Button
        android:id="@+id/bt9"
        android:alpha="0.7"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_toRightOf="@id/bt8"
        android:layout_below="@id/bt6"
        android:layout_marginLeft="10sp"
        android:layout_marginTop="15sp"
        android:onClick="btClick"
        android:background="#33CCFF" />
      
      <Button
        android:id="@+id/bt10"
        android:alpha="0.7"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_toRightOf="@id/bt6"
        android:layout_above="@id/bt8"
        android:layout_marginLeft="10sp"
        android:layout_marginBottom="15sp"
        android:onClick="btClick"
        android:background="#33CCFF"
        android:height="100dp"
        android:width="120dp" /> 
      
</RelativeLayout>
